--- a/server/views/approval/release.pug
+++ b/server/views/approval/release.pug
@@ -12,7 +12,7 @@ block content
         +errorBannerWithDetail(errorObject, [
             {field: 'decision', message: 'Select yes or no'},
             {field: 'notedComments', message: 'Add a comment'},
-            {field: 'reason', message: 'Add a reason'}
+            {field: 'reason', message: 'Select a reason'}
         ])
         include ../taskList/prisonerDetails
 
