--- a/server/views/sent/CAtoRO.pug
+++ b/server/views/sent/CAtoRO.pug
@@ -4,4 +4,4 @@ block content
 
     include ./mixins/sentMixin
 
-    +sentContent('Address information submitted')
+    +sentContent('Curfew address submitted')
