--- a/server/views/review/includes/addressActions.pug
+++ b/server/views/review/includes/addressActions.pug
@@ -1,24 +1,35 @@
 div
     h3.heading-small Actions
-    div.pure-g
-        div.pure-u-md-1-2
-            p Homeowner/landlord consent withdrawn
-            div
-                if !consentWithdrawn
+    if !addressWithdrawn && !consentWithdrawn
+        div.pure-g
+            div.pure-u-md-1-2
+                p Homeowner/landlord consent withdrawn
+                div
                     form(method="post", name="withdrawConsent", action="/hdc/curfew/withdrawConsent/" + nomisId)
                         input(type="hidden" name="_csrf" value=csrfToken)
                         input(type="hidden" name="consentWithdrawn" value="Yes")
                         button#withdrawConsent.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw consent
-                else
-                    a.largeMarginBottom.button(href="/hdc/proposedAddress/curfewAddress/"+nomisId) Add a new address
 
-        div.pure-u-md-1-2
-            p Offender has requested to withdraw address
-            div
-                if !addressWithdrawn
+            div.pure-u-md-1-2
+                p Offender has requested to withdraw address
+                div
                     form(method="post", name="withdrawAddress", action="/hdc/curfew/withdrawAddress/"+nomisId)
                         input(type="hidden" name="_csrf" value=csrfToken)
                         input(type="hidden" name="addressWithdrawn" value="Yes")
                         button#withdrawAddress.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw address
-                else
-                    a.largeMarginBottom.button(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Add a new address
+
+
+    else
+        div.pure-g
+            div.pure-u-md-1-2
+                p Enter a new curfew address for review
+                a.largeMarginBottom.button(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Add a new address
+
+            div.pure-u-md-1-2
+                p Reinstate this address
+                div
+                    form(method="post", name="withdrawConsent", action="/hdc/curfew/withdrawConsent/" + nomisId)
+                        input(type="hidden" name="_csrf" value=csrfToken)
+                        input(type="hidden" name="consentWithdrawn" value="No")
+                        input(type="hidden" name="addressWithdrawn" value="No")
+                        button#withdrawConsent.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Reinstate address
