--- a/server/views/taskList/reportingInstructionsTask.pug
+++ b/server/views/taskList/reportingInstructionsTask.pug
@@ -6,9 +6,9 @@ div.taskListItem
             if licenceStatus.tasks.reportingInstructions === 'DONE'
                 div Confirmed
             else
-                | Not yet added
+                | Not completed
         div.pure-u-1-4.center
             if user.role === 'RO'
-                +proceed(licenceStatus.tasks.reportingInstructions, 'UNSTARTED', 'Start', 'View', "/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
+                +startContinueView(licenceStatus.tasks.reportingInstructions, "/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
             else
                 a.taskListAction.center.button.button-secondary(href="/hdc/review/reporting/" + prisonerInfo.offenderNo) View
