--- a/server/views/taskList/riskManagementTask.pug
+++ b/server/views/taskList/riskManagementTask.pug
@@ -13,9 +13,9 @@ div.taskListItem
                 else
                     div No victim liaison required
             else
-                | Not yet confirmed
+                | Not completed
         div.pure-u-1-4.center
             if user.role === 'RO'
-                +proceed(licenceStatus.tasks.riskManagement, 'UNSTARTED', 'Start', 'View', "/hdc/risk/riskManagement/" + prisonerInfo.offenderNo)
+                +startContinueView(licenceStatus.tasks.riskManagement, "/hdc/risk/riskManagement/" + prisonerInfo.offenderNo)
             else
                 a.taskListAction.center.button.button-secondary(href="/hdc/review/risk/" + prisonerInfo.offenderNo) View
