Base getSubmissionTarget on transition type instead of stage

--- a/server/views/send/CAtoDM.pug
+++ b/server/views/send/CAtoDM.pug
@@ -10,5 +10,5 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="CA")
             input(type="hidden" name="receiver" value="DM")
-            input(type="hidden" name="transitionType" value="CAtoDM")
+            input(type="hidden" name="transitionType" value=transitionType)
             include includes/sendButtons
