--- a/server/views/send/DM.pug
+++ b/server/views/send/DM.pug
@@ -10,5 +10,5 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="DM")
             input(type="hidden" name="receiver" value="CA")
-            input(type="hidden" name="transitionType" value="DMtoCA")
+            input(type="hidden" name="transitionType" value=transitionType)
             include includes/sendButtons
