--- a/server/views/send/ROtoCA.pug
+++ b/server/views/send/ROtoCA.pug
@@ -40,7 +40,7 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="RO")
             input(type="hidden" name="receiver" value="CA")
-            input(type="hidden" name="transitionType" value="ROtoCA")
+            input(type="hidden" name="transitionType" value=transitionType)
             if submissionTarget && submissionTarget.premise
                 input(type="hidden" name="submissionTarget" value=submissionTarget.premise)
             include includes/sendButtons
