--- a/server/views/includes/personalDetailsSummary.pug
+++ b/server/views/includes/personalDetailsSummary.pug
@@ -2,7 +2,7 @@ if Object.keys(prisoner).length > 0
     div.borderTopLight.borderBottomLight.midPaddingTopBottom
         ul.inlineList.padRight30.block
             li.padRight30 Name&nbsp;&nbsp;
-                span.bold #{prisoner.lastName}, #{prisoner.firstName}
+                span.bold #{prisoner.firstName} #{prisoner.lastName}
 
             li.padRight30.block Prison Number&nbsp;&nbsp;
                 span.bold #{nomisId}
