--- a/server/views/taskList/approvalTask.pug
+++ b/server/views/taskList/approvalTask.pug
@@ -1,4 +1,4 @@
-div.taskListItem.largeMarginBottom
+div.taskListItem.borderBottom.largeMarginBottom
     h2.heading-medium Final decision
 
     div.pure-g
