--- a/server/views/taskList/finalChecksTask.pug
+++ b/server/views/taskList/finalChecksTask.pug
@@ -1,4 +1,4 @@
-div.taskListItem.smallPaddingBottom
+div.taskListItem.borderBottom.smallPaddingBottom
     h2.heading-medium Final checks
 
     div.pure-g
