Update question wording

--- a/server/views/finalChecks/seriousOffence.pug
+++ b/server/views/finalChecks/seriousOffence.pug
@@ -13,7 +13,7 @@ block content
         include ../includes/personalDetailsSummary
 
         div.pure-u-2-3
-            h2.heading-large Has the offender been referred to the police or other law enforcement agency or to the independent adjudicator (IA) in relation to an alleged offence committed during the current sentence and the matter remains unresolved?
+            h2.heading-large Has the offender committed an offence in prison which was referred to the police or independent adjudicator and is not resolved?
 
     if errorObject.decision
         p.block.error-message Select yes or no
