--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -29,7 +29,7 @@ block content
                 +addressDetail('curfew', address, review, addressSafety)
 
                 if stage === 'PROCESSING_CA'
-                    div.borderBottomLight.borderTopLight.marginBottomLarge
+                    div.borderBottomLightMedium.borderTopLight.marginBottomLarge
                         include ./includes/addressActions
 
             else
