Fix sent view path errors

--- a/server/views/send/index.pug
+++ b/server/views/send/index.pug
@@ -23,3 +23,6 @@ block content
 
         else if transitionType === 'dmToCa'
             include DM.pug
+
+        else
+            div.largeMarginTop Invalid submission. Please go back and correct any errors
