--- a/server/views/review/curfewAddress.pug
+++ b/server/views/review/curfewAddress.pug
@@ -37,7 +37,7 @@ block content
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
             if !errorsOnPage
-                a#continueBtn.button.button-primary.smallMarginTop(href="/hdc/send/" + nomisId role="button")
+                a#continueBtn.button.button-primary.smallMarginTop(href="/hdc/send/addressReview/" + nomisId role="button")
                     | Continue
             else
                 a#correctAddressLink(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Correct the errors before continuing
