--- a/server/views/review/licenceDetails.pug
+++ b/server/views/review/licenceDetails.pug
@@ -14,5 +14,5 @@ block content
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
-            a#continueBtn.button.button-primary.smallMarginTop(href="/hdc/send/" + nomisId role="button")
+            a#continueBtn.button.button-primary.smallMarginTop(href="/hdc/send/finalChecks/" + nomisId role="button")
                 | Continue
