--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -9,8 +9,12 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
                 img#prisonerImage.pure-img(src= "/hdc/taskList/image/" + prisonerInfo.imageId)
             else
                 img#prisonerImage.pure-img(src= "/public/images/no-photo.png")
-            if(prisonerInfo.captureDate)
-        p.subText#prisonerPhotoDate Uploaded: #{prisonerInfo.captureDate}
+
+        if licenceVersion
+            div.largeMarginTop
+                div Licence version
+                div
+                    span.bold V#{licenceVersion}
 
     div.pure-u-1.pure-u-md-5-24.padRight15
         div.midMarginBottom
