updated text when no hdc eligible offenders found in search

--- a/server/views/search/includes/resultsTable.pug
+++ b/server/views/search/includes/resultsTable.pug
@@ -1,5 +1,5 @@
 if hdcEligible && hdcEligible.length <= 0
-    p No offenders found
+    p No HDC eligible offenders found
 else
     table#hdcEligiblePrisoners.largeMarginBottom
         thead
