--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -12,9 +12,14 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
 
         if licenceVersion
             div.largeMarginTop
-                div Licence version
+                div Working version
                 div
                     span.bold V#{licenceVersion}
+        if approvedVersion
+            div.largeMarginTop
+                div Approved version
+                div
+                    span.bold V#{approvedVersion.version}, #{approvedVersion.timestamp}
 
     div.pure-u-1.pure-u-md-5-24.padRight15
         div.midMarginBottom
