--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -47,13 +47,13 @@ table#hdcEligiblePrisoners.largeMarginBottom
                             | #{prisoner.status}
 
                     td
-                        if ['UNSTARTED', 'ELIGIBILITY', 'PROCESSING_CA'].includes(prisoner.stage)
+                        if ['UNSTARTED', 'ELIGIBILITY', 'PROCESSING_CA', 'DECIDED'].includes(prisoner.stage)
                             if ['Not started', 'Reviewing case'].includes(prisoner.status)
                                 a.button.button-primary.fullWidth.center(href="/hdc/taskList/" + prisoner.offenderNo role="button")
                                     | Start
                             else
                                 a.button.button-secondary.fullWidth.center(href="/hdc/taskList/" + prisoner.offenderNo role="button")
                                     | View
-                        else if ['PROCESSING_RO', 'APPROVAL', 'DECIDED'].includes(prisoner.stage)
+                        else if ['PROCESSING_RO', 'APPROVAL'].includes(prisoner.stage)
                             a.button.button-secondary.fullWidth.center(href="/hdc/review/licence/" + prisoner.offenderNo role="button")
                                 | View
