--- a/server/views/taskList/finalChecksTask.pug
+++ b/server/views/taskList/finalChecksTask.pug
@@ -23,6 +23,7 @@ div.taskListItem.borderBottom.smallPaddingBottom
             else
                 | Not completed
         div.pure-u-1-4.center
-            if user.role === 'CA'
+            if user.role === 'CA' && licenceStatus.stage === 'DECIDED'
+                a.taskListAction.center.button.button-secondary(href="/hdc/finalChecks/seriousOffence/" + prisonerInfo.offenderNo) View/Edit
+            else if user.role === 'CA'
                 +startContinueView(licenceStatus.tasks.finalChecks, "/hdc/finalChecks/seriousOffence/" + prisonerInfo.offenderNo)
-
